--- a/src/styles/-home.scss
+++ b/src/styles/-home.scss
@@ -230,92 +230,109 @@
             }
             .rowOneOneItem{
                 position:relative;
+                .legendFly{
+                    position: absolute;
+                    bottom: -22px;
+                    width:596px;
+                    text-align: center;
+                    left: 50%;
+                    margin-left:-298px;
+                    span{
+                        padding-left: 27px;
+                        display: inline-block;
+                        font-size: 12px;
+                        line-height: 14px;
+                        color: #9e9e9e;
+                        position: relative;
+                        margin: 0px 15px;
+                        &.legendItem1{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #e7f1ff;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                        &.legendItem2{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #59cab6;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                        &.legendItem3{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #f38080;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                        &.legendItem4{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #fff;
+                                box-sizing: border-box;
+                                border: 1px solid #f38080;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                        &.legendItem5{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #fcb030;
+                                border-radius: 50%;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                        &.legendItem6{
+                            padding-left: 18px;
+                            &:before{
+                                content: "";
+                                display: block;
+                                width: 8px;
+                                height: 8px;
+                                background: #f7c572;
+                                position: absolute;
+                                left:0px;
+                                top: 3px;
+                            }
+                        }
+                    }
+                }
                 .rowOneOneItemFl{
                     width: 64%;
                     height: 230px;
                     position: relative;
                     float: left;
-                    .legendFly{
-                        position: absolute;
-                        bottom: -22px;
-                        width:596px;
-                        text-align: center;
-                        left: 50%;
-                        margin-left:-298px;
-                        span{
-                            display: inline-block;
-                            margin-right: 10px;
-                            font-size: 12px;
-                            line-height: 14px;
-                            color: #999;
-                            padding-left: 27px;
-                            position: relative;
-                        }
-                        .legendItem1:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #e7f1ff;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                        .legendItem2:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #59cab6;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                        .legendItem6:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #f7c572;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                        .legendItem3:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #f38080;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                        .legendItem4:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #fff;
-                            box-sizing: border-box;
-                            border: 1px solid #f38080;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                        
-                        .legendItem5:before{
-                            content: "";
-                            display: block;
-                            width: 8px;
-                            height: 8px;
-                            background: #fcb030;
-                            border-radius: 50%;
-                            position: absolute;
-                            left: 15px;
-                            top: 3px;
-                        }
-                    }
                 }
                 .rowOneOneItemFr{
                     background: #f3f8fe;
@@ -555,31 +572,6 @@
                             height:100%;
                         }
                     }
-                    .maplegend{
-                        clear: both;
-                        display: block;
-                        overflow: hidden;
-                        text-align: center;
-                        line-height: 14px;
-                        padding-top:10px;
-                        span{
-                            display: inline-block;
-                            font-size: 12px;
-                            line-height: 14px;
-                            color: #9e9e9e;
-                            position: relative;
-                            margin: 0px 9px;
-                            padding-left: 12px;
-                            i{
-                                display: block;
-                                width:8px;
-                                height:8px;
-                                position: absolute;
-                                left:0px;
-                                top:3px;
-                            }
-                        }
-                    }
                 }
                 .top-ten{
                     float:right;
@@ -664,6 +656,13 @@
             }
             .rowTwoTwoItem{
                 padding-top:4px;
+                .rowTwoTwoItemBox{
+                    clear: both;
+                    display: block;
+                    overflow: hidden;
+                    height: 400px;
+                    width:100%;
+                }
                 .rowTwoTwoItemBtn{
                     clear: both;
                     text-align: center;
@@ -1031,11 +1030,32 @@
                                 color:#aaaaaa;
                                 line-height:1;
                             }
-                            .groupNum{
-                                float:right;
+                        }
+                        .percen{
+                            clear:both;
+                            background:#fff;
+                            width:100%;
+                            height:16px;
+                            line-height:1;
+                            margin-top:13px;
+                            .percenFl{
+                                clear:both;
+                                display:inline-block;
+                                height:16px;
+                                border-radius:8px;
+                                width:100%;
+                                background:-webkit-linear-gradient(left,#e4ebea, #c0c5c5);
+                                background:-o-linear-gradient(right,#e4ebea, #c0c5c5);
+                                background:-moz-linear-gradient(right,#e4ebea, #c0c5c5);
+                                background:linear-gradient(to right,#e4ebea, #c0c5c5);
+                                vertical-align:top;
+                            }
+                            .percenFr{
                                 font-size:18px;
                                 color:#acb0b0;
-                                line-height:20px;
+                                line-height:16px;
+                                padding-left: 10px;
+                                white-space: nowrap;
                                 i{
                                     display:inline-block;
                                     border-radius:3px;
@@ -1053,8 +1073,7 @@
                                             vertical-align: middle;
                                             line-height: 11px;
                                             transform: scale(0.8);
-                                            float: left;
-                                            padding-top: 2px;
+                                            vertical-align: text-top;
                                         }
                                     }
                                     &.falling{
@@ -1066,30 +1085,10 @@
                                             vertical-align: middle;
                                             line-height: 11px;
                                             transform: scale(0.8);
-                                            float: left;
-                                            padding-top: 2px;
+                                            vertical-align: text-top;
                                         }
                                     }
                                 }
-                            }
-                        }
-                        .percen{
-                            clear:both;
-                            background:#fff;
-                            width:100%;
-                            height:16px;
-                            line-height:1;
-                            margin-top:13px;
-                            span{
-                                clear:both;
-                                display:inline-block;
-                                height:16px;
-                                border-radius:8px;
-                                background:-webkit-linear-gradient(left,#e4ebea, #c0c5c5);
-                                background:-o-linear-gradient(right,#e4ebea, #c0c5c5);
-                                background:-moz-linear-gradient(right,#e4ebea, #c0c5c5);
-                                background:linear-gradient(to right,#e4ebea, #c0c5c5);
-                                vertical-align:top;
                             }
                         }
                     }
@@ -1111,7 +1110,7 @@
                                 }
                             }
                             .percen{
-                                span{
+                                .percenFl{
                                     background:-webkit-linear-gradient(left,#fdc236, #fb9a0c);
                                     background:-o-linear-gradient(right,#fdc236, #fb9a0c);
                                     background:-moz-linear-gradient(right,#fdc236, #fb9a0c);
@@ -1138,7 +1137,7 @@
                                 }
                             }
                             .percen{
-                                span{
+                                .percenFl{
                                     background:-webkit-linear-gradient(left,#cfd8da, #a1c2cb);
                                     background:-o-linear-gradient(right,#cfd8da, #a1c2cb);
                                     background:-moz-linear-gradient(right,#cfd8da, #a1c2cb);
@@ -1165,7 +1164,7 @@
                                 }
                             }
                             .percen{
-                                span{
+                                .percenFl{
                                     background:-webkit-linear-gradient(left,#e3c997, #d1b685);
                                     background:-o-linear-gradient(right,#e3c997, #d1b685);
                                     background:-moz-linear-gradient(right,#e3c997, #d1b685);
